add unit_tests (#11)
* add unit testing

Change-Id: Id74f6e9da78967d1c8261f0b6c35669a7fc1648b

* fix typo

Change-Id: Idbc96de69e3eb277640ace5470c1ccda74535bef

* add an empty testfiles directory

Change-Id: I607151c32e0a8a1f3313cfc341d244a3c6028e21

* test_OUT_2 is peculiar. now passes

Change-Id: Ia8c843c860df376b821d317d8f3cdce5ade5f0b9

* make README markdown

Change-Id: I96ab6110eb7766e4d7ffe0c1a867d12f3213cb51

* format README.md to reflect markdown. Add compiler flags to tests

Change-Id: I353bd3986a01ad48f37948fa0bd75d17b9e1717e

* for now ignore testfiles directory before someone accidentally pushes test data to the repo

Change-Id: I898c3b8cf0bc4183d97239daee894c86ef9d7663

* missing include directories during build. still cannot figure out why test_out_3 cannot compile

Change-Id: I76b13609113b65f22d53625b49f9da33ff73cc39

* GNU DA flags were not being set correctly

Change-Id: I1ee5482913731c8167d43c1c71e8722faa9c50b9

* consistent flags now.

Change-Id: Ibfae1474d6ef1271b3c6fa8bbd5ab909a168860d

* remove testfiles directory and make ENABLE_TESTS=OFF by default

Change-Id: I7d687cc8122f758fe919e97a27a52c362c12f90e

* add ability to download test data from ftp server

* was missing ALL in the get_test_data target

* test only for _4 libraries

* add github action

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,41 @@ endif()
 
 include(GNUInstallDirs)
 
+option(ENABLE_TESTS "Enable Tests" OFF)
+
+# Determine the kinds upfront (both src/ and test/ need them).
+# Both GNU and Intel support DYNAMIC_ALLOCATION
+list(APPEND kinds "4_DA" "8_DA" "d_DA")
+# Only Intel supports STATIC_ALLOCATION
+if(CMAKE_C_COMPILER_ID MATCHES "^(Intel)$")
+  list(APPEND kinds "4" "8" "d")
+endif()
+
+# Set common to the package compiler flags
+if(CMAKE_C_COMPILER_ID MATCHES "^(GNU)$")
+  set(CMAKE_C_FLAGS_DEBUG "-ggdb -Wall -O0")
+endif()
+
+if(CMAKE_Fortran_COMPILER_ID MATCHES "^(Intel)$")
+  set(fortran_8_flags "-r8 -i8")
+  set(fortran_d_flags "-r8")
+  set(CMAKE_Fortran_FLAGS "-g -traceback")
+  set(CMAKE_Fortran_FLAGS_DEBUG "-O0")
+  set(CMAKE_Fortran_FLAGS_RELEASE "-O3")
+elseif(CMAKE_Fortran_COMPILER_ID MATCHES "^(GNU)$")
+  set(fortran_8_flags "-fdefault-real-8 -fdefault-integer-8")
+  set(fortran_d_flags "-fdefault-real-8")
+  set(CMAKE_Fortran_FLAGS "-g -fbacktrace")
+  set(CMAKE_Fortran_FLAGS_DEBUG "-ggdb -Wall -O0")
+  set(CMAKE_Fortran_FLAGS_RELEASE "-O3")
+endif()
+
+set(fortran_8_DA_flags ${fortran_8_flags})
+set(fortran_d_DA_flags ${fortran_d_flags})
+
 add_subdirectory(src)
+
+if(ENABLE_TESTS)
+  enable_testing()
+  add_subdirectory(test)
+endif()
