--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,29 +1,9 @@
+# Set library specific flags
 if(CMAKE_C_COMPILER_ID MATCHES "^(Intel)$")
-
   set(c_8_defs "F77_INTSIZE_8")
-  set(c_8_DA_defs ${c_8_defs})
-
-  set(CMAKE_Fortran_FLAGS "-g -traceback")
-  set(CMAKE_Fortran_FLAGS_DEBUG "-O0")
-  set(CMAKE_Fortran_FLAGS_RELEASE "-O3")
-
-  set(fortran_8_flags "-r8 -i8")
-  set(fortran_d_flags "-r8")
-  set(fortran_8_DA_flags ${fortran_8_flags})
-  set(fortran_d_DA_flags ${fortran_d_flags})
-
-elseif(CMAKE_C_COMPILER_ID MATCHES "^(GNU|Clang|AppleClang)$")
-
-  set(CMAKE_C_FLAGS_DEBUG "-ggdb -Wall -O0")
-
-  set(CMAKE_Fortran_FLAGS "-g -fbacktrace")
-  set(CMAKE_Fortran_FLAGS_DEBUG "-ggdb -Wall -O0")
-  set(CMAKE_Fortran_FLAGS_RELEASE "-O3")
-
-  set(fortran_8_flags "-fdefault-real-8 -fdefault-integer-8")
-  set(fortran_d_flags "-fdefault-real-8")
-
 endif()
+
+set(c_8_DA_defs ${c_8_defs})
 
 # Extract BUFRLIB parameters
 file(READ bufrlib.prm _bufrlib_prm_str)
@@ -46,14 +26,6 @@ else()
 endif()
 
 include("list_of_files.cmake")
-
-# Both GNU and Intel support DYNAMIC_ALLOCATION
-list(APPEND kinds "4_DA" "8_DA" "d_DA")
-
-# Only Intel supports STATIC_ALLOCATION
-if(CMAKE_C_COMPILER_ID MATCHES "^(Intel)$")
-  list(APPEND kinds "4" "8" "d")
-endif()
 
 foreach(kind ${kinds})
   set(lib_name ${PROJECT_NAME}_${kind})
@@ -81,12 +53,16 @@ foreach(kind ${kinds})
   target_compile_definitions(${lib_name}_c PRIVATE "${endian_def}")
   target_compile_definitions(${lib_name}_c PRIVATE "${c_defs}")
   target_compile_definitions(${lib_name}_c PRIVATE "${c_${kind}_defs}")
+  target_include_directories(${lib_name}_c PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
   set_target_properties(${lib_name}_f PROPERTIES Fortran_MODULE_DIRECTORY "${module_dir}")
 
   add_library(${lib_name} STATIC $<TARGET_OBJECTS:${lib_name}_f>
                                  $<TARGET_OBJECTS:${lib_name}_c>)
   add_library(${PROJECT_NAME}::${lib_name} ALIAS ${lib_name})
+
+  target_include_directories(${lib_name} PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
 
   target_include_directories(${lib_name} INTERFACE
     $<BUILD_INTERFACE:${module_dir}>
