Update path to `bufr.tar` on FTP server.
Update path to `bufr.tar`

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
-# Fetch test data from: https://ftp.emc.ncep.noaa.gov/public/bufr.tar
-set(BUFR_URL "https://ftp.emc.ncep.noaa.gov/public")
+# Fetch test data from: https://ftp.emc.ncep.noaa.gov/static_files/public/bufr.tar
+set(BUFR_URL "https://ftp.emc.ncep.noaa.gov/static_files/public")
 set(BUFR_TAR "bufr.tar")
 
 find_program(CURL_pgm curl)
