changes to support fvers

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,9 @@ endif()
 
 set(c_8_DA_defs ${c_8_defs})
 
+# Create the bvers.f file with the version from VERSION file.
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/bvers.f.in ${CMAKE_CURRENT_BINARY_DIR}/bvers.f @ONLY)
+
 # Extract BUFRLIB parameters
 file(READ bufrlib.prm _bufrlib_prm_str)
 foreach(_var IN ITEMS MAXNC MXNAF)
