fixing finding bvers.f

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ endif()
 
 set(c_8_DA_defs ${c_8_defs})
 
+# Create the bvers.f file with the version from VERSION file.
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/bvers.f.in ${CMAKE_CURRENT_BINARY_DIR}/bvers.f @ONLY)
 
 # Extract BUFRLIB parameters
@@ -39,8 +40,6 @@ foreach(kind ${kinds})
   else()
     set(allocation_def "STATIC_ALLOCATION")
   endif()
-
-  list(APPEND ${fortran_src} ${CMAKE_CURRENT_BINARY_DIR}/bvers.f)
 
   add_library(${lib_name}_f STATIC OBJECT ${fortran_src})
   set_target_properties(${lib_name}_f PROPERTIES COMPILE_FLAGS
