--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,12 +9,12 @@ set(c_8_DA_defs ${c_8_defs})
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/bvers.f.in ${CMAKE_CURRENT_BINARY_DIR}/bvers.f @ONLY)
 
 # Extract BUFRLIB parameters
-file(READ bufrlib.prm _bufrlib_prm_str)
+file(READ bufrlib.inc _bufrlib_prm_str)
 foreach(_var IN ITEMS MAXNC MXNAF)
     if(_bufrlib_prm_str MATCHES "${_var} = ([0-9]+)")
       list(APPEND c_defs ${_var}=${CMAKE_MATCH_1})
     else()
-      message(FATAL_ERROR "Unable to parse variable ${_var} value from file: src/bufrlib.prm")
+      message(FATAL_ERROR "Unable to parse variable ${_var} value from file: src/bufrlib.inc")
     endif()
 endforeach()
 
