automatically configure bufrlib.inc based on parameters defined in C

--- a/src/bufrlib.h.in
+++ b/src/bufrlib.h.in
@@ -12,8 +12,8 @@
 #    define MAXCD @MAXCD_STATIC@
 #endif
 
-#define MAXNC @MAXNC@
-#define MXNAF @MXNAF@
+#define MAXNC 600
+#define MXNAF 3
 
 /*
 ** On certain operating systems, the FORTRAN compiler appends an underscore
