--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,9 @@ project(
     VERSION ${pVersion}
     LANGUAGES C Fortran)
 
-# Handle user options.  
+# Handle user options.
 option(ENABLE_DOCS "Enable generation of doxygen-based documentation." OFF)
+option(BUILD_SHARED_LIBS "Enable building shared libraries" OFF)
 
 if(NOT CMAKE_BUILD_TYPE MATCHES "^(Debug|Release|RelWithDebInfo|MinSizeRel)$")
   message(STATUS "Setting build type to 'Release' as none was specified.")
@@ -26,7 +27,7 @@ include(GNUInstallDirs)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-option(BUILD_SHARED_LIBS "Enable building shared libraries" OFF)
+find_package(Python3 COMPONENTS Interpreter)
 
 # Determine the kinds upfront (both src/ and test/ need them).
 # Both GNU and Intel support DYNAMIC_ALLOCATION
@@ -66,11 +67,15 @@ set(fortran_d_DA_flags ${fortran_d_flags})
 add_subdirectory(src)
 add_subdirectory(utils)
 
+if(Python3_Interpreter_FOUND)
+  add_subdirectory(python)
+endif()
+
 enable_testing()
 add_subdirectory(test)
 
 # Generate doxygen documentation if desired.
 if(ENABLE_DOCS)
   find_package(Doxygen REQUIRED)
-  add_subdirectory(docs)  
+  add_subdirectory(docs)
 endif()
