--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,16 @@ jobs:
 
     steps:
 
+    - name: install-deps
+      run: |
+        sudo apt-get update
+        sudo apt-get install doxygen
+        sudo apt-get install python3-pip python3-dev python3-numpy
+        sudo python3 -m pip install -U pip setuptools
+        sudo python3 -m pip install -U numpy
+        sudo python3 -m pip install -U netCDF4
+        sudo python3 -m pip install -U pdoc
+
     - name: checkout
       uses: actions/checkout@v2
       with:
@@ -21,7 +31,7 @@ jobs:
         cd bufr
         mkdir build
         cd build
-        cmake .. -DENABLE_TESTS=ON
+        cmake ..
         make -j2
 
     - name: test
