--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         cd bufr
         mkdir build
         cd build
-        cmake .. -DENABLE_TESTS=ON
+        cmake ..
         make -j2
 
     - name: test
