--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,21 @@ jobs:
 
     - name: install-deps
       run: |
-        sudo apt-get update
-        sudo apt-get install doxygen
-        sudo apt-get install python3-pip python3-dev python3-numpy
-        sudo python3 -m pip install -U pip setuptools
-        sudo python3 -m pip install -U numpy
-        sudo python3 -m pip install -U netCDF4
-        sudo python3 -m pip install -U pdoc
+        if [[ ${{ matrix.os }} == "ubuntu-20.04" ]]; then
+          sudo apt-get update
+          sudo apt-get install doxygen
+          sudo apt-get install python3-pip python3-dev python3-numpy
+          sudo python3 -m pip install -U pip setuptools
+          sudo python3 -m pip install -U numpy
+          sudo python3 -m pip install -U netCDF4
+          sudo python3 -m pip install -U pdoc
+        elif [[ ${{ matrix.os }} == "macos-10.15" ]]; then
+          brew install python3
+          pip3 install setuptools
+          pip3 install numpy
+          pip3 install netCDF4
+          pip3 install pdoc
+        fi
 
     - name: checkout
       uses: actions/checkout@v2
