--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -741,7 +741,7 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT = @abs_top_srcdir@/docs/user_guide.md @abs_top_srcdir@/src @config_srcdir@
+INPUT = @abs_top_srcdir@/docs @abs_top_srcdir@/src @config_srcdir@
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -761,7 +761,7 @@ INPUT_ENCODING         = UTF-8
 # *.md, *.mm, *.dox, *.py, *.f90, *.f, *.for, *.tcl, *.vhd, *.vhdl, *.ucf,
 # *.qsf, *.as and *.js.
 
-FILE_PATTERNS          = *.F90 *.f90 *.f *.F *.c *.h
+FILE_PATTERNS          = *.F90 *.f90 *.f *.F *.c *.h *.inc *.md
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
 # be searched for input files as well.
@@ -877,7 +877,7 @@ FILTER_SOURCE_PATTERNS =
 # (index.html). This can be useful if you have a project on for instance GitHub
 # and want to reuse the introduction page also for the doxygen output.
 
-USE_MDFILE_AS_MAINPAGE = @abs_top_srcdir@/docs/sp_user_guide.md 
+USE_MDFILE_AS_MAINPAGE = Mainpage.md
 
 #---------------------------------------------------------------------------
 # Configuration options related to source browsing
