--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -741,7 +741,7 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT = @abs_top_srcdir@/docs @abs_top_srcdir@/src @config_srcdir@
+INPUT = @abs_top_srcdir@/docs @abs_top_srcdir@/utils @abs_top_srcdir@/src @config_srcdir@
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
