add utility to get table

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -2,8 +2,10 @@ list(APPEND _utils_srcs
   binv.f
   cmpbqm.f
   readbp.f
-  readmp.f
-  sinv.f)
+  sinv.f
+  readmp.f90
+  gettab.f90
+)
 
 foreach(_src ${_utils_srcs})
   get_filename_component(_name "${_src}" NAME_WE)
