--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,8 @@ jobs:
     strategy:
       matrix:
         os: [macos-10.15,  ubuntu-20.04]
-    env:
-      FC: gfortran-9
-      CC: gcc-9
-
+        compiler: [gcc-9,  gcc-10]
+        
     steps:
 
     - name: install-deps
@@ -29,9 +27,13 @@ jobs:
           pip3 install setuptools
           pip3 install numpy
           pip3 install netCDF4
-          sudo ln -sf /usr/local/bin/gfortran-9 /usr/local/bin/gfortran
+          if [[ ${{ matrix.compiler }} == "gcc-9" ]]; then
+            sudo ln -sf /usr/local/bin/gfortran-9 /usr/local/bin/gfortran
+          elif  [[ ${{ matrix.compiler }} == "gcc-10" ]]; then
+            sudo ln -sf /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
+          fi
         fi
-
+        
     - name: checkout
       uses: actions/checkout@v2
       with:
@@ -40,6 +42,13 @@ jobs:
 
     - name: build
       run: |
+        if [[ ${{ matrix.compiler }} == "gcc-9" ]]; then
+          export CC=gcc-9
+          export FC=gfortran-9
+        elif [[ ${{ matrix.compiler }} == "gcc-10" ]]; then
+          export CC=gcc-10
+          export FC=gfortran-10
+        fi 
         cd bufr
         mkdir build
         cd build
