--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,8 @@ if(ENABLE_PYTHON)
   add_subdirectory(python)
 endif()
 
+add_subdirectory(tables)
+
 add_subdirectory(test)
 
 # Generate doxygen documentation if desired.
