add debufr to sample utilities, along with corresponding test cases

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -17,6 +17,15 @@ foreach(_src ${_utils_srcs})
   list(APPEND _utils_execs ${_exec})
 endforeach()
 
+add_library(_lib OBJECT debufr.f)
+set(_exec debufr.x)
+add_executable(${_exec} debufr.c)
+target_compile_definitions(${_exec} PUBLIC "UNDERSCORE")
+add_dependencies(${_exec} bufr::bufr_4_DA)
+target_link_libraries(${_exec} PRIVATE $<TARGET_OBJECTS:_lib>)
+target_link_libraries(${_exec} PRIVATE bufr::bufr_4_DA)
+list(APPEND _utils_execs ${_exec})
+
 install(TARGETS ${_utils_execs}
         RUNTIME
         DESTINATION bin
