--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -81,6 +81,11 @@ list(APPEND test_OUT_5_srcs
   test_OUT_5.f
 )
 
+list(APPEND test_c_interface_srcs
+  test_c_interface.c
+  test_c_interface_2.c
+)
+
 # Install testing scripts
 list(APPEND test_scripts
   test_wrapper_IN.sh
@@ -173,18 +178,18 @@ foreach(test_src IN ITEMS ${test_OUT_3_srcs} ${test_OUT_4_srcs})
   endforeach()
 endforeach()
 
-# Test the c interface
-foreach(kind ${test_kinds})
-  if(${kind} MATCHES "^([4|8|d]_DA)$")
-    set(test test_c_interface_${kind})
-    set(test_exe test_c_interface_${kind}.x)
-    add_executable(${test_exe} test_c_interface.c)
-    add_dependencies(${test_exe}  bufr_${kind})
-    target_link_libraries(${test_exe}  PRIVATE bufr::bufr_${kind})
+# c_interface tests
+foreach(test_src IN ITEMS ${test_c_interface_srcs}) 
+  string(REPLACE ".c" "" testPref ${test_src})
+  foreach(kind ${test_kinds})
+    set(test     ${testPref}_${kind})
+    set(test_exe ${test}.x)
+    add_executable(${test_exe} ${test_src})
+    add_dependencies(${test_exe} bufr_${kind})
+    target_link_libraries(${test_exe} PRIVATE bufr::bufr_${kind})
     add_test(NAME ${test} COMMAND ${CMAKE_BINARY_DIR}/test/${test_exe})
-  endif()
+  endforeach()
 endforeach()
-
 
 # Test utilities
 
