--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -81,6 +81,10 @@ list(APPEND test_OUT_5_srcs
   test_OUT_5.f
 )
 
+list(APPEND test_OUT_6_srcs
+  test_OUT_6.f
+)
+
 list(APPEND test_c_interface_srcs
   test_c_interface.c
   test_c_interface_2.c
@@ -111,15 +115,16 @@ function(bufr_add_test_preAPX TESTNAME EXENAME)
            COMMAND ${CMAKE_BINARY_DIR}/bin/test_wrapper_OUT.sh ${EXENAME} "Y")
 endfunction()
 
-# test all "4" (4 byte real, 4 byte int) DYNAMIC_ALLOCATION builds
-list(APPEND test_kinds "4_DA")
-# test all "4" (4 byte real, 4 byte int) STATIC_ALLOCATION builds, except OUT_3 and OUT_4 as noted below
-list(APPEND test_kinds "4")
+list(APPEND test_kinds_4 "4_DA")
+list(APPEND test_kinds_4 "4")
+
+list(APPEND test_kinds_8 "8_DA")
+list(APPEND test_kinds_8 "8")
 
 # IN tests
 foreach(test_src ${test_IN_srcs})
   string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${test_kinds})
+  foreach(kind ${test_kinds_4})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
@@ -134,7 +139,7 @@ endforeach()
 # OUT_1 and OUT_5 tests
 foreach(test_src IN ITEMS ${test_OUT_1_srcs} ${test_OUT_5_srcs})
   string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${test_kinds})
+  foreach(kind ${test_kinds_4})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
@@ -149,7 +154,7 @@ endforeach()
 # OUT_2 tests
 foreach(test_src ${test_OUT_2_srcs})
   string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${test_kinds})
+  foreach(kind ${test_kinds_4})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
@@ -161,10 +166,10 @@ foreach(test_src ${test_OUT_2_srcs})
   endforeach()
 endforeach()
 
-# OUT_3 and OUT_4 tests
+# OUT_3 and OUT_4 tests; these are for "DA" (dynamic allocation) builds only
 foreach(test_src IN ITEMS ${test_OUT_3_srcs} ${test_OUT_4_srcs})
   string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${test_kinds})
+  foreach(kind ${test_kinds_4})
     if(${kind} MATCHES "^([4|8|d]_DA)$")
       set(test     ${testPref}_${kind})
       set(test_exe ${test}.x)
@@ -178,10 +183,25 @@ foreach(test_src IN ITEMS ${test_OUT_3_srcs} ${test_OUT_4_srcs})
   endforeach()
 endforeach()
 
+# OUT_6 tests; these are for "8" (8-byte integer, 8-byte real) builds only
+foreach(test_src IN ITEMS ${test_OUT_6_srcs})
+  string(REPLACE ".f" "" testPref ${test_src})
+  foreach(kind ${test_kinds_8})
+    set(test     ${testPref}_${kind})
+    set(test_exe ${test}.x)
+    add_executable(${test_exe} ${test_src})
+    set_target_properties(${test_exe} PROPERTIES COMPILE_FLAGS
+                                                 "${fortran_${kind}_flags}")
+    add_dependencies(${test_exe} bufr_${kind})
+    target_link_libraries(${test_exe} PRIVATE bufr::bufr_${kind})
+    bufr_add_test(${test} ${test_exe})
+  endforeach()
+endforeach()
+
 # c_interface tests
 foreach(test_src IN ITEMS ${test_c_interface_srcs}) 
   string(REPLACE ".c" "" testPref ${test_src})
-  foreach(kind ${test_kinds})
+  foreach(kind ${test_kinds_4})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
