fix debufr build for clang on macos

--- a/src/bufrlib.h.in
+++ b/src/bufrlib.h.in
@@ -41,6 +41,7 @@
 #define ardllocc   ardllocc_
 #define bort	   bort_
 #define bort_exit  bort_exit_
+#define bvers      bvers_
 #define cadn30	   cadn30_
 #define ccbfl	   ccbfl_
 #define cmpia	   cmpia_
@@ -117,6 +118,7 @@ void arallocc( void );
 void ardllocc( void );
 void bort( char *, f77int );
 void bort_exit( void );
+void bvers( char *, f77int ); 
 void cadn30( f77int *, char *, f77int ); 
 void ccbfl( void );
 int cmpia( const void *, const void * );
