--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,6 +75,7 @@ jobs:
         ctest
 
     - name: retest_failed
+      run: |
         if: ${{ failure() }}
           cd $GITHUB_WORKSPACE/bufr/build
           ctest -VV --rerun-failed
